--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -11,7 +11,8 @@
     />
     <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF" />
     <meta name="theme-color" content="#ffffff" />
-    <meta name="viewport" content="width=device-width, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Hero App Workout - Privacy Policy. Learn how we collect, use, and protect your personal data." />
     <title>Hero App</title>
   </head>
   <body>
